Fix hidden elements flickering

--- a/admintools/html/index.css
+++ b/admintools/html/index.css
@@ -80,6 +80,7 @@ body {
 
 #site-container {
     position: absolute;
+    display: none;
   }
 
 
